updating puppet installation script